# frames

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.py
.github/workflows/: ci.yml
docs/: api_reference.rst  conf.py  getting_started.md  index.rst
example/: benchmark.cpp
include/: frames.hpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/: CMakeLists.txt  test_benchmark.cpp  test_frames.cpp
